--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@babel/core": "^7.12.3",
     "@babel/preset-env": "^7.12.1",
     "babel-loader": "^8.1.0",
+    "babel-plugin-import": "^1.13.1",
     "clean-webpack-plugin": "^3.0.0",
     "core-js": "^3.6.5",
     "css-loader": "^5.0.0",
@@ -38,6 +39,8 @@
     "less-loader": "^7.0.2",
     "lint-staged": "^10.4.2",
     "mini-css-extract-plugin": "^1.0.0",
+    "mocker-api": "^2.6.0",
+    "mockjs": "^1.1.0",
     "optimize-css-assets-webpack-plugin": "^5.0.4",
     "style-loader": "^2.0.0",
     "terser-webpack-plugin": "3.1.0",
@@ -51,5 +54,10 @@
     "webpack-cli": "^3.3.12",
     "webpack-dev-server": "^3.11.0",
     "webpack-merge": "^5.0.9"
+  },
+  "dependencies": {
+    "ant-design-vue": "^1.6.5",
+    "axios": "^0.21.0",
+    "http-status-codes": "^2.1.4"
   }
 }
