--- a/package.json
+++ b/package.json
@@ -58,6 +58,8 @@
   "dependencies": {
     "ant-design-vue": "^1.6.5",
     "axios": "^0.21.0",
-    "http-status-codes": "^2.1.4"
+    "http-status-codes": "^2.1.4",
+    "vue-router": "^3.4.8",
+    "vuex": "^3.5.1"
   }
 }
