--- a/package.json
+++ b/package.json
@@ -62,6 +62,8 @@
     "element-ui": "^2.14.0",
     "http-status-codes": "^2.1.4",
     "vue-router": "^3.4.8",
-    "vuex": "^3.5.1"
+    "vuex": "^3.5.1",
+    "vxe-table": "^2.9.26",
+    "xe-utils": "^2.8.1"
   }
 }
