--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "mockjs": "^1.1.0",
     "optimize-css-assets-webpack-plugin": "^5.0.4",
     "style-loader": "^2.0.0",
+    "style-resources-loader": "^1.3.3",
     "terser-webpack-plugin": "3.1.0",
     "thread-loader": "^3.0.0",
     "url-loader": "^4.1.1",
