--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "author": "HLB",
   "license": "MIT",
   "scripts": {
-    "serve": "webpack-dev-server --config webpack.config.js",
-    "build": "webpack --progress --config ./build/webpack.prod.config.js",
+    "serve": "webpack-dev-server --config build/webpack.dev.config.js",
+    "build": "webpack --progress --config build/webpack.prod.config.js",
     "prettier": "prettier --write \"{**/*,*}.{js,vue,less}\""
   },
   "lint-staged": {
@@ -27,6 +27,7 @@
     "babel-plugin-component": "^1.1.1",
     "babel-plugin-import": "^1.13.1",
     "clean-webpack-plugin": "^3.0.0",
+    "copy-webpack-plugin": "^6.3.2",
     "core-js": "^3.6.5",
     "css-loader": "^5.0.0",
     "eslint": "^7.11.0",
@@ -43,7 +44,10 @@
     "mocker-api": "^2.6.0",
     "mockjs": "^1.1.0",
     "optimize-css-assets-webpack-plugin": "^5.0.4",
+    "sass": "^1.29.0",
+    "sass-loader": "^10.1.0",
     "style-loader": "^2.0.0",
+    "style-resources-loader": "^1.3.3",
     "terser-webpack-plugin": "3.1.0",
     "thread-loader": "^3.0.0",
     "url-loader": "^4.1.1",
@@ -61,6 +65,7 @@
     "axios": "^0.21.0",
     "element-ui": "^2.14.0",
     "http-status-codes": "^2.1.4",
+    "js-cookie": "^2.2.1",
     "vue-router": "^3.4.8",
     "vuex": "^3.5.1",
     "vxe-table": "^2.9.26",
